openweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
spec:
  selector:
    app.kubernetes.io/name: openwebui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
